# wsc-python

./: CHANGELOG.md  Makefile  globalnoc-wsc.spec  pyproject.toml  sync-upstream-mirror.sh  test_async.py
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  prompt.sh
.github/workflows/: build-devcontainer.yml  build-rpm.yml  repoify.yml
src/globalnoc/: __init__.py
src/globalnoc/wsc/: __init__.py  __main__.py  ecp.py  exc.py  wsc.py
