[project]
dependencies = [
  "httpx>=0.28.1",
  "lxml>=6.0.2",
]
description = "GlobalNOC WebServicesClient for Python"
name = "globalnoc-wsc"
readme = "README.md"
requires-python = ">=3.11"
version = "2.0.0"

[project.scripts]
"wsutil.py" = "globalnoc.wsc.__main__:main"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.9,<0.11.0"]

[tool.uv.build-backend]
module-name = "globalnoc"
source-dir = "src"
